refactor: HTML modificado para fazer login e autenticação

--- a/templates/login.html
+++ b/templates/login.html
@@ -43,10 +43,10 @@
         <div class="social-login text-center mt-3">
           <span class="divider">ou</span>
           <div class="icons d-flex justify-content-center gap-3 mt-2">
-            <a href="#">
+            <a href="http://127.0.0.1:8000/accounts/github/login/?process=login">
               <img src="{% static 'assets/github.svg' %}" alt="GitHub" width="40">
             </a>
-            <a href="#">
+            <a href="http://127.0.0.1:8000/accounts/google/login/?process=login">
               <img src="{% static 'assets/google.svg' %}" alt="Google" width="40">
             </a>
           </div>
