--- a/templates/members.html
+++ b/templates/members.html
@@ -2,12 +2,19 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Membros</title>
 </head>
+
 <body>
   <h1>bem vindo</h1>
+
+  <div class="logout-btn-container">
+    <a href="http://127.0.0.1:8000/accounts/logout/" class="logout-btn">Logout</a>
+  </div>
 </body>
+
 </html>
