--- a/templates/singup.html
+++ b/templates/singup.html
@@ -31,22 +31,22 @@
         <h3 class="text-center mb-3">Cadastro</h3>
         <form method="post">
           {% csrf_token %}
-          {% for field in form.visible_fields %}
-          <div class="mb-3">
-            <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-            {{ field }}
-          </div>
-          {% endfor %}
+            {% for field in form.visible_fields %}
+            <div class="mb-3">
+              <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+              {{ field }}
+            </div>
+            {% endfor %}
           <button type="submit" class="btn btn-primary w-100">Cadastrar</button>
         </form>
 
         <div class="social-login text-center mt-3">
           <span class="divider">ou</span>
           <div class="icons d-flex justify-content-center gap-3 mt-2">
-            <a href="#">
+            <a href="http://127.0.0.1:8000/accounts/github/login/?process=login">
               <img src="{% static 'assets/github.svg' %}" alt="GitHub" width="40">
             </a>
-            <a href="#">
+            <a href="http://127.0.0.1:8000/accounts/google/login/?process=login">
               <img src="{% static 'assets/google.svg' %}" alt="Google" width="40">
             </a>
           </div>
